[gd_scene load_steps=17 format=3 uid="uid://b5h2pri2rlto6"]

[ext_resource type="Texture2D" uid="uid://cshhyvohbmrci" path="res://Player/Sprite/Playercharacter.png" id="1_t641g"]
[ext_resource type="Script" path="res://Player/script/player.gd" id="1_vor6l"]
[ext_resource type="Script" path="res://Player/script/Player_state-machine.gd" id="3_3625j"]
[ext_resource type="Script" path="res://Player/script/state_Idle.gd" id="4_ax50n"]
[ext_resource type="Script" path="res://Player/script/state_Walk.gd" id="5_npebl"]
[ext_resource type="Texture2D" uid="uid://buc5fjgfe1xox" path="res://Player/Sprite/Health bar.png" id="6_48gwj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aukri"]
size = Vector2(20, 33)

[sub_resource type="Animation" id="Animation_r5xe6"]
resource_name = "Idile_down"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 2, 0]
}

[sub_resource type="Animation" id="Animation_wtnsn"]
resource_name = "Idile_side"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 1, 2]
}

[sub_resource type="Animation" id="Animation_tdciw"]
resource_name = "Idile_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 7, 5]
}

[sub_resource type="Animation" id="Animation_dclll"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ul3xn"]
resource_name = "Walk_down"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 2, 6, 2]
}

[sub_resource type="Animation" id="Animation_lxld7"]
resource_name = "Walk_side"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 1, 1, 2]
}

[sub_resource type="Animation" id="Animation_d565c"]
resource_name = "Walk_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 4, 4, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1uspr"]
_data = {
"Idile_down": SubResource("Animation_r5xe6"),
"Idile_side": SubResource("Animation_wtnsn"),
"Idile_up": SubResource("Animation_tdciw"),
"RESET": SubResource("Animation_dclll"),
"Walk_down": SubResource("Animation_ul3xn"),
"Walk_side": SubResource("Animation_lxld7"),
"Walk_up": SubResource("Animation_d565c")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_65ybj"]
size = Vector2(17, 30)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(197, 121)
collision_mask = 16
wall_min_slide_angle = 0.174533
script = ExtResource("1_vor6l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -11.5)
shape = SubResource("RectangleShape2D_aukri")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(3.3125, -12.3125)
scale = Vector2(0.103739, 0.109604)
texture = ExtResource("1_t641g")
hframes = 3
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1uspr")
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_3625j")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_ax50n")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("5_npebl")
move_speed = 200.0

[node name="health_bar" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="health_bar"]
offset_left = -30.0
offset_top = -18.0
offset_right = 95.0
offset_bottom = 22.0

[node name="TextureRect" type="TextureRect" parent="health_bar/HBoxContainer"]
custom_minimum_size = Vector2(39, 0)
layout_mode = 2

[node name="HealthBar" type="Sprite2D" parent="health_bar/HBoxContainer/TextureRect"]
position = Vector2(53, 42)
scale = Vector2(0.100586, 0.0849609)
texture = ExtResource("6_48gwj")

[node name="TextureRect2" type="TextureRect" parent="health_bar/HBoxContainer"]
custom_minimum_size = Vector2(39, 0)
layout_mode = 2

[node name="HealthBar" type="Sprite2D" parent="health_bar/HBoxContainer/TextureRect2"]
position = Vector2(53, 42)
scale = Vector2(0.100586, 0.0849609)
texture = ExtResource("6_48gwj")

[node name="TextureRect3" type="TextureRect" parent="health_bar/HBoxContainer"]
custom_minimum_size = Vector2(39, 0)
layout_mode = 2

[node name="HealthBar" type="Sprite2D" parent="health_bar/HBoxContainer/TextureRect3"]
position = Vector2(53, 42)
scale = Vector2(0.100586, 0.0849609)
texture = ExtResource("6_48gwj")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, -11)
shape = SubResource("RectangleShape2D_65ybj")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
